Fix overlapping image

--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,18 @@ div {
   position: relative;
 }
 
+.col-md-12 {
+  position: relative;
+}
+
 .circle-image {
+  position: relative;
   background-size: cover;
   background-position: center;
   margin: auto;
   width: 300px;
   height: 300px;
-  border-radius:50%;
+  border-radius: 50%;
   background-image: url(../public/me.jpg);
   display: block;
   background-position-x: 65%;
